--- a/arch/arm/configs/PolegSVB_debug_defconfig
+++ b/arch/arm/configs/PolegSVB_debug_defconfig
@@ -209,8 +209,8 @@ CONFIG_BROADCOM_PHY=y
 #
 # Non-8250 serial port support
 #
-CONFIG_SERIAL_NPCMX50=y
-CONFIG_SERIAL_NPCMX50_CONSOLE=y
+CONFIG_SERIAL_NPCM=y
+CONFIG_SERIAL_NPCM_CONSOLE=y
 CONFIG_NPCM750_OTP=y
 CONFIG_NPCM750_OTP_WRITE_ENABLE=y
 CONFIG_HW_RANDOM=y
@@ -255,7 +255,7 @@ CONFIG_NPCM750_WATCHDOG=y
 #
 # hwmon drivers
 #
-CONFIG_SENSORS_NPCM750=y
+CONFIG_SENSORS_NPCM7XX=y
 
 #
 # USB HID support
@@ -306,7 +306,7 @@ CONFIG_MMC_SDHCI_NPCM750=y
 # SOC (System On Chip) specific Drivers
 #
 CONFIG_IIO=y
-CONFIG_NPCM750_ADC=y
+CONFIG_NPCM7XX_ADC=y
 #
 # DOS/FAT/NT Filesystems
 #
