--- a/drivers/net/ethernet/nuvoton/Makefile
+++ b/drivers/net/ethernet/nuvoton/Makefile
@@ -2,6 +2,6 @@
 # Makefile for the Nuvoton network device drivers.
 #
 
-#Eternet 10/100 EMC 
+#Eternet 10/100 EMC
 obj-$(CONFIG_W90P910_ETH) += w90p910_ether.o
-obj-$(CONFIG_NPCM750_EMC_ETH) += npcm750_emc.o
+obj-$(CONFIG_NPCM7XX_EMC_ETH) += npcm7xx_emc.o
