--- a/drivers/char/hw_random/Kconfig
+++ b/drivers/char/hw_random/Kconfig
@@ -180,16 +180,16 @@ config HW_RANDOM_OMAP
 
  	  If unsure, say Y.
 
-config HW_RANDOM_NPCM750
-	tristate "NPCM750 Random Number Generator support"
+config HW_RANDOM_NPCM7XX
+	tristate "NPCM7XX Random Number Generator support"
 	depends on HW_RANDOM && ARCH_NPCM7XX
 	default HW_RANDOM
  	---help---
  	  This driver provides kernel-side support for the Random Number
-	  Generator hardware found on npcm750 processor.
+	  Generator hardware found on npcm7xx processor.
 
 	  To compile this driver as a module, choose M here: the
-	  module will be called npcm750-rng.
+	  module will be called npcm7xx-rng.
 
  	  If unsure, say Y.
 
