--- a/drivers/i2c/busses/Kconfig
+++ b/drivers/i2c/busses/Kconfig
@@ -728,7 +728,7 @@ config I2C_NOMADIK
 	  I2C interface from ST-Ericsson's Nomadik and Ux500 architectures,
 	  as well as the STA2X11 PCIe I/O HUB.
 
-config I2C_NPCMX50
+config I2C_NPCM7XX
 	tristate "Nuvoton I2C Controller"
 	depends on ARCH_NPCM7XX
 	help
@@ -736,7 +736,7 @@ config I2C_NPCMX50
 	  Nuvoton I2C controller.
 
 	  This driver can also be built as a module.  If so, the module
-	  will be called i2c-npcmx50.
+	  will be called i2c-npcm7xx.
 
 config I2C_OCORES
 	tristate "OpenCores I2C Controller"
