--- a/drivers/net/ethernet/nuvoton/Kconfig
+++ b/drivers/net/ethernet/nuvoton/Kconfig
@@ -25,25 +25,25 @@ config W90P910_ETH
 	  Say Y here if you want to use built-in Ethernet ports
 	  on w90p910 processor.
 
-config NPCM750_EMC_ETH
-	bool "Nuvoton NPCM750 Ethernet EMC"
-	depends on ARM && ARCH_NPCM7XX && ARCH_NPCM750
+config NPCM7XX_EMC_ETH
+	bool "Nuvoton NPCM7XX Ethernet EMC"
+	depends on ARM && ARCH_NPCM7XX
 	select PHYLIB
 	select MII
 	---help---
 	  Say Y here if you want to use built-in Ethernet MAC
 	  on NPCM750 MCU.
 
-config NPCM750_EMC_ETH_DEBUG
-	bool "Nuvoton NPCM750 Ethernet EMC debug"
-	depends on NPCM750_EMC_ETH
+config NPCM7XX_EMC_ETH_DEBUG
+	bool "Nuvoton NPCM7XX Ethernet EMC debug"
+	depends on NPCM7XX_EMC_ETH
 	---help---
-	  Say Y here if you want debug info via /proc/driver/npcm750_emc.x
+	  Say Y here if you want debug info via /proc/driver/npcm7xx_emc.x
 
-config NPCM750_EMC_ETH_DEBUG_EXT
-	bool "Nuvoton NPCM750 Ethernet EMC extra debug"
-	depends on NPCM750_EMC_ETH_DEBUG
+config NPCM7XX_EMC_ETH_DEBUG_EXT
+	bool "Nuvoton NPCM7XX Ethernet EMC extra debug"
+	depends on NPCM7XX_EMC_ETH_DEBUG
 	---help---
-	  Say Y here if you want extra debug info via /proc/driver/npcm750_emc.x
+	  Say Y here if you want extra debug info via /proc/driver/npcm7xx_emc.x
 
 endif # NET_VENDOR_NUVOTON
