--- a/arch/arm/configs/PolegSVB_defconfig
+++ b/arch/arm/configs/PolegSVB_defconfig
@@ -46,8 +46,6 @@ CONFIG_NETDEVICES=y
 CONFIG_NPCM7XX_EMC_ETH=y
 CONFIG_STMMAC_ETH=y
 CONFIG_BROADCOM_PHY=y
-CONFIG_SERIAL_NPCM=y
-CONFIG_SERIAL_NPCM_CONSOLE=y
 CONFIG_NPCM750_OTP=y
 CONFIG_NPCM750_OTP_WRITE_ENABLE=y
 CONFIG_HW_RANDOM=y
@@ -103,3 +101,9 @@ CONFIG_CRYPTO_LZO=y
 CONFIG_CRYPTO_USER_API_SKCIPHER=y
 CONFIG_CRYPTO_DEV_NPCMX50=y
 CONFIG_ARM_CRYPTO=y
+CONFIG_SERIAL_8250=y
+CONFIG_SERIAL_8250_CONSOLE=y
+CONFIG_SERIAL_8250_NPCM=y
+CONFIG_SERIAL_8250_NR_UARTS=4
+CONFIG_SERIAL_8250_RUNTIME_UARTS=4
+CONFIG_SERIAL_OF_PLATFORM=y
