dts: npcm7xx: move FIU3 pin ctrl use to dts
Move FIU3 quad pin control use from dtsi to dts file

Signed-off-by: Tomer Maimon <tmaimon77@gmail.com>

--- a/arch/arm/boot/dts/nuvoton-common-npcm7xx.dtsi
+++ b/arch/arm/boot/dts/nuvoton-common-npcm7xx.dtsi
@@ -241,7 +241,7 @@
 			clocks = <&clk NPCM7XX_CLK_AHB>;
 			clock-names = "clk_ahb";
 			pinctrl-names = "default";
-			pinctrl-0 = <&spi3_pins &spi3quad_pins>;
+			pinctrl-0 = <&spi3_pins>;
 			status = "disabled";
 			spi-nor@0 {
 					compatible = "jedec,spi-nor";
