--- a/drivers/spi/Kconfig
+++ b/drivers/spi/Kconfig
@@ -400,6 +400,13 @@ config SPI_NUC900
 	help
 	  SPI driver for Nuvoton NUC900 series ARM SoCs
 
+config SPI_NPCM
+	tristate "Nuvoton PSPI Controller"
+	depends on ARCH_NPCM7XX || COMPILE_TEST
+	help
+	  This enables using the peripheral SPI controller in master mode
+	  on the Nuvoton BMC SoCs.
+
 config SPI_LANTIQ_SSC
 	tristate "Lantiq SSC SPI controller"
 	depends on LANTIQ || COMPILE_TEST
