--- a/arch/arm/configs/PolegSVB_defconfig
+++ b/arch/arm/configs/PolegSVB_defconfig
@@ -35,6 +35,7 @@ CONFIG_MTD_BLOCK=y
 CONFIG_MTD_RAM=y
 CONFIG_MTD_COMPLEX_MAPPINGS=y
 CONFIG_MTD_SPI_NOR=y
+CONFIG_MTD_M25P80=y
 CONFIG_SPI_NPCM=y
 CONFIG_OF_OVERLAY=y
 CONFIG_BLK_DEV_LOOP=y
@@ -116,3 +117,5 @@ CONFIG_CRYPTO_DEV_NPCMX50=y
 CONFIG_ARM_CRYPTO=y
 CONFIG_NPCM7XX_LPC_BPC=y
 CONFIG_NPCM7XX_PCI_MBOX=y
+CONFIG_SPI=y
+
