--- a/arch/arm/boot/dts/nuvoton-npcm750-evb.dts
+++ b/arch/arm/boot/dts/nuvoton-npcm750-evb.dts
@@ -46,8 +46,6 @@
 		i2c13 = &i2c13;
 		i2c14 = &i2c14;
 		i2c15 = &i2c15;
-		pspi0 = &pspi0;
-		pspi1 = &pspi1;
 	};
 
 	chosen {
@@ -470,45 +468,16 @@
 				};
 			};
 
-			pspi0: pspi@200000 {
-				cs-gpios = <&gpio6 11 GPIO_ACTIVE_LOW>;
+			/* example for future pspi binding */
+			/*
+			pspi: pspi@0 {
+				pinctrl-names = "default";
+				pinctrl-0 = <&pspi1_pins &pspi2_pins
+					&gpio20o_pins &gpio203o_pins>;
+				cs-gpios = <&gpio 20 1>, <&gpio 203 1>;
 				status = "okay";
-				Flash@0 {
-					compatible = "winbond,w25q128", "jedec,spi-nor";
-					reg = <0x0>;
-					#address-cells = <1>;
-					#size-cells = <1>;
-					spi-max-frequency = <5000000>;
-					partition@0 {
-						label = "spi_spare1";
-						reg = <0x0000000 0x800000>;
-					};
-					partition@1 {
-						label = "spi_spare2";
-						reg = <0x800000 0x0>;
-					};
-				};
 			};
-
-			pspi1: pspi@201000 {
-				cs-gpios = <&gpio0 20 GPIO_ACTIVE_LOW>;
-				status = "okay";
-				Flash@0 {
-					compatible = "winbond,w25q128fw", "jedec,spi-nor";
-					reg = <0x0>;
-					#address-cells = <1>;
-					#size-cells = <1>;
-					spi-max-frequency = <5000000>;
-					partition@0 {
-						label = "spi_spare1";
-						reg = <0x0000000 0x800000>;
-					};
-					partition@1 {
-						label = "spi_spare2";
-						reg = <0x800000 0x0>;
-					};
-				};
-			};
+			*/
 		};
 	};
 
