config: npcm750: add npcm spi configuration to SVB defconfig
Signed-off-by: Tomer Maimon <tmaimon77@gmail.com>

--- a/arch/arm/configs/PolegSVB_defconfig
+++ b/arch/arm/configs/PolegSVB_defconfig
@@ -35,7 +35,10 @@ CONFIG_MTD_BLOCK=y
 CONFIG_MTD_RAM=y
 CONFIG_MTD_COMPLEX_MAPPINGS=y
 CONFIG_MTD_SPI_NOR=y
-CONFIG_SPI_NPCM=y
+CONFIG_MTD_M25P80=y
+CONFIG_SPI_NPCM_FIU=y
+CONFIG_SPI=y
+CONFIG_SPI_NPCM_PSPI=y
 CONFIG_OF_OVERLAY=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_NBD=y
