--- a/arch/arm/boot/dts/nuvoton-npcm750-evb.dts
+++ b/arch/arm/boot/dts/nuvoton-npcm750-evb.dts
@@ -151,7 +151,7 @@
 			status = "okay";
 		};
 
-		spi0: spi@fb000000 {
+		fiu0: fiu@fb000000 {
 			status = "okay";
 			spi-nor@0 {
 				partitions@80000000 {
@@ -205,7 +205,7 @@
 			};
 		};
 
-		spi3: spi@c0000000 {
+		fiu3: fiu@c0000000 {
 			pinctrl-0 = <&spi3quad_pins>;
 			status = "okay";
 			spi-nor@0 {
@@ -225,7 +225,7 @@
 			};
 		};
 
-		spix: spi@fb001000 {
+		fiux: fiu@fb001000 {
 			status = "okay";
 			spix-mode;
 		};
