--- a/arch/arm/boot/dts/nuvoton-npcm730-gsj.dts
+++ b/arch/arm/boot/dts/nuvoton-npcm730-gsj.dts
@@ -5,7 +5,7 @@
 #include "nuvoton-npcm730.dtsi"
 #include "nuvoton-npcm730-gsj-gpio.dtsi"
 / {
-	model = "Quanta GSJ Board (Device Tree v10)";
+	model = "Quanta GSJ Board (Device Tree v12)";
 	compatible = "nuvoton,npcm750";
 
 	aliases {
@@ -13,21 +13,15 @@
 		ethernet1 = &gmac0;
 		serial3 = &serial3;
 		udc9 = &udc9;
-		i2c0 = &i2c0;
 		i2c1 = &i2c1;
 		i2c2 = &i2c2;
 		i2c3 = &i2c3;
 		i2c4 = &i2c4;
-		i2c5 = &i2c5;
-		i2c6 = &i2c6;
-		i2c7 = &i2c7;
 		i2c8 = &i2c8;
 		i2c9 = &i2c9;
 		i2c10 = &i2c10;
 		i2c11 = &i2c11;
 		i2c12 = &i2c12;
-		i2c13 = &i2c13;
-		i2c14 = &i2c14;
 		i2c15 = &i2c15;
 		fiu0 = &fiu0;
 	};
@@ -88,7 +82,40 @@
 				#size-cells = <1>;
 				reg = <0>;
 				spi-rx-bus-width = <2>;
-#include "nuvoton-npcm730-gsj-flash-layout.dtsi"
+				partitions@80000000 {
+					compatible = "fixed-partitions";
+					#address-cells = <1>;
+					#size-cells = <1>;
+					bmc@0{
+						label = "bmc";
+						reg = <0x000000 0x2000000>;
+					};
+					u-boot@0 {
+						label = "u-boot";
+						reg = <0x0000000 0x80000>;
+						read-only;
+					};
+					u-boot-env@100000{
+						label = "u-boot-env";
+						reg = <0x00100000 0x40000>;
+					};
+					kernel@200000 {
+						label = "kernel";
+						reg = <0x0200000 0x600000>;
+					};
+					rofs@800000 {
+						label = "rofs";
+						reg = <0x800000 0x1400000>;
+					};
+					rwfs@1c00000 {
+						label = "rwfs";
+						reg = <0x1c00000 0x300000>;
+					};
+					reserved@1f00000 {
+						label = "reserved";
+						reg = <0x1f00000 0x100000>;
+					};
+				};
 			};
 		};
 
@@ -127,13 +154,6 @@
 			};
 			otp:otp@189000 {
 				status = "okay";
-			};
-
-			i2c0: i2c@80000 {
-				#address-cells = <1>;
-				#size-cells = <0>;
-				bus-frequency = <100000>;
-				status = "disabled";
 			};
 
 			i2c1: i2c@81000 {
@@ -182,25 +202,6 @@
 					reg = <0x5c>;
 					status = "okay";
 				};
-			};
-			i2c5: i2c@85000 {
-				#address-cells = <1>;
-				#size-cells = <0>;
-				bus-frequency = <100000>;
-				status = "disabled";
-			};
-			i2c6: i2c@86000 {
-				#address-cells = <1>;
-				#size-cells = <0>;
-				bus-frequency = <100000>;
-				status = "disabled";
-			};
-
-			i2c7: i2c@87000 {
-				#address-cells = <1>;
-				#size-cells = <0>;
-				bus-frequency = <100000>;
-				status = "disabled";
 			};
 
 			i2c8: i2c@88000 {
@@ -258,32 +259,6 @@
 				ucd90160@6b {
 					compatible = "ti,ucd90160";
 					reg = <0x6b>;
-				};
-			};
-
-			i2c13: i2c@8d000 {
-				#address-cells = <1>;
-				#size-cells = <0>;
-				bus-frequency = <100000>;
-				status = "okay";
-
-				ipmb@40000010 {
-					compatible = "slave-mqueue";
-					reg = <0x40000010>;
-					status = "okay";
-				};
-			};
-
-			i2c14: i2c@8e000 {
-				#address-cells = <1>;
-				#size-cells = <0>;
-				bus-frequency = <100000>;
-				status = "okay";
-
-				ipmb@40000012 {
-					compatible = "slave-mqueue";
-					reg = <0x40000012>;
-					status = "okay";
 				};
 			};
 
@@ -357,16 +332,19 @@
 						&fanin2_pins &fanin3_pins
 						&fanin4_pins &fanin5_pins>;
 				status = "okay";
+
 				fan@0 {
 					reg = <0x00>;
 					fan-tach-ch = /bits/ 8 <0x00 0x01>;
 					cooling-levels = <127 255>;
 				};
+
 				fan@1 {
 					reg = <0x01>;
 					fan-tach-ch = /bits/ 8 <0x02 0x03>;
 					cooling-levels = /bits/ 8 <127 255>;
 				};
+
 				fan@2 {
 					reg = <0x02>;
 					fan-tach-ch = /bits/ 8 <0x04 0x05>;
@@ -478,8 +456,6 @@
 				&gpio202od_pins
 				>;
 	};
-
-
 
 	leds {
 		compatible = "gpio-leds";
